--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,9 +24,10 @@ debug = false
 clap = { version = "4.5.37", features = ["derive", "env"] }
 anyhow = "1.0.99"
 thiserror = "2.0.12"
+once_cell = "1.21.3"
 
 tracing = "0.1"
-tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "ansi"], no-default-features = true }
+tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "ansi"], default-features = false }
 tracing-setup = { git = "https://github.com/brainhivenl/tracing-setup.git" }
 
 chrono = { version = "0.4.41", features = ["serde"] }
@@ -34,15 +35,19 @@ uuid = { version = "1.16.0", features = ["v4"] }
 base64 = "0.22.1"
 
 serde = { version = "1.0.219", features = ["derive"] }
+serde_with = "3.14.1"
 serde_json = "1.0.140"
 toml = "0.8.22"
 
-reqwest = { version = "0.12.23", features = ["json"] }
-futures = "0.3.31"
 tokio = { version = "1.44.2", features = ["full"] }                                                                                   
+futures = "0.3.31"
+tower-http = { version = "0.6.6", features = ["trace"] }
+reqwest = { version = "0.12.23", features = ["json"] }
 axum = "0.8.3"                                                                                                                        
 axum-macros = "0.5.0"
-tower-http = { version = "0.6.6", features = ["trace"] }
+axum-metrics = "0.2.0"
+metrics = "0.24.2"
+metrics-exporter-prometheus = "0.17.2"
 
 diesel = { version = "2.2.10", features = ["chrono", "uuid", "serde_json"]}
 diesel-async = { version = "0.5.2", features = [
@@ -50,5 +55,4 @@ diesel-async = { version = "0.5.2", features = [
     "bb8",
     "async-connection-wrapper",
 ] }
-once_cell = "1.21.3"
-serde_with = "3.14.1"
+
