--- a/helm/templates/webhook.yaml
+++ b/helm/templates/webhook.yaml
@@ -9,7 +9,7 @@ spec:
   selector:
     matchLabels:
       app.kubernetes.io/name: webhook
-  replicas: {{ default 1 .Values.webhook.minReplicas }}
+  replicas: 0
   strategy:
     type: RollingUpdate
     rollingUpdate:
@@ -21,10 +21,6 @@ spec:
       labels:
         app.kubernetes.io/name: webhook
         app.kubernetes.io/part-of: {{ .Release.Name }}
-      annotations:
-        prometheus.io/scrape: "true"
-        prometheus.io/port: "8000"
-        prometheus.io/path: "/metrics"
     spec:
       terminationGracePeriodSeconds: 15
       imagePullSecrets:
@@ -146,9 +142,30 @@ spec:
   selector:
     app.kubernetes.io/name: webhook
   ports:
-    - protocol: TCP
+    - name: http
       port: 8000
       targetPort: 8000
+
+---
+apiVersion: monitoring.coreos.com/v1
+kind: ServiceMonitor
+metadata:
+  name: webhook
+  labels:
+    app.kubernetes.io/name: webhook
+    app.kubernetes.io/part-of: {{ .Release.Name }}
+    release: kube-prometheus-stack
+spec:
+  endpoints:
+  - port: http
+    path: /metrics
+    interval: 30s
+  selector:
+    matchLabels:
+      app.kubernetes.io/name: webhook
+  namespaceSelector:
+    matchNames:
+      - {{ .Release.Namespace }}
 
 ---
 apiVersion: gateway.networking.k8s.io/v1
