--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,9 +45,8 @@ tower-http = { version = "0.6.6", features = ["trace"] }
 reqwest = { version = "0.12.23", features = ["json"] }
 axum = "0.8.3"                                                                                                                        
 axum-macros = "0.5.0"
-axum-metrics = "0.2.0"
+axum-prometheus = "0.9.0"
 metrics = "0.24.2"
-metrics-exporter-prometheus = "0.17.2"
 
 diesel = { version = "2.2.10", features = ["chrono", "uuid", "serde_json"]}
 diesel-async = { version = "0.5.2", features = [
