--- a/helm/templates/metrics.yaml
+++ b/helm/templates/metrics.yaml
@@ -13,7 +13,10 @@ spec:
   replicas: 1
   revisionHistoryLimit: 0
   strategy:
-    type: Recreate
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
   template:
     metadata:
       labels:
