--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -28,5 +28,6 @@ metrics:
   releaseName: kube-prometheus-stack
 
 clusterDB:
-  replicas: 1
-  storageSize: 10Gi
+  replicas: 3
+  storageSize: 5Gi
+  storageClass: longhorn-local
