--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -23,11 +23,14 @@ pollStatus:
   schedule: "0 * * * *" # every hour
   jobHistoryLimit: 3
 
-metrics:
-  enabled: true
-  releaseName: kube-prometheus-stack
-
 clusterDB:
   replicas: 3
   storageSize: 5Gi
   storageClass: longhorn-local
+  backup:
+    enabled: true
+    barmanObjectName: backblaze-b2
+
+metrics:
+  enabled: true
+  releaseName: kube-prometheus-stack
