--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -29,6 +29,7 @@ clusterDB:
   storageClass: longhorn-local
   backup:
     enabled: true
+    schedule: "0 0 0 * * *"
     barmanObjectName: backblaze-b2
 
 metrics:
