--- a/helm/templates/database.yaml
+++ b/helm/templates/database.yaml
@@ -4,7 +4,7 @@ kind: ObjectStore
 metadata:
   name: backblaze-b2
 spec:
-  retentionPolicy: "30d"
+  retentionPolicy: 30d
   configuration:
     destinationPath: s3://backups-0snsf7rceJ/barman
     endpointURL: https://s3.eu-central-003.backblazeb2.com
