--- a/crates/dhl/Cargo.toml
+++ b/crates/dhl/Cargo.toml
@@ -7,7 +7,12 @@ edition = "2024"
 name = "dhl"
 path = "lib.rs"
 
+[[bin]]
+name = "dhlctl"
+path = "cli.rs"
+
 [dependencies]
+clap = { workspace = true } 
 thiserror = "2.0.12"
 once_cell = "1.21.3"
 tracing = "0.1"
