--- a/crates/adapter/Cargo.toml
+++ b/crates/adapter/Cargo.toml
@@ -48,7 +48,7 @@ toml = "0.8.22"
 
 tokio = { version = "1.44.2", features = ["full"] }                                                                                   
 futures = "0.3.31"
-tower-http = { version = "0.6.6", features = ["trace"] }
+tower-http = { version = "0.6.6", features = ["trace", "cors"] }
 reqwest = { version = "0.12.23", features = ["json"] }
 axum = "0.8.3"                                                                                                                        
 axum-macros = "0.5.0"
@@ -61,5 +61,6 @@ diesel-async = { version = "0.5.2", features = [
     "bb8",
     "async-connection-wrapper",
 ] }
+http = "1.3.1"
 
 
