--- a/crates/dhl/Cargo.toml
+++ b/crates/dhl/Cargo.toml
@@ -17,7 +17,7 @@ thiserror = "2.0.12"
 once_cell = "1.21.3"
 tracing = "0.1"
 chrono = { version = "0.4.41", features = ["serde"] }
-uuid = { version = "1.16.0", features = ["v4"] }
+uuid = { version = "1.16.0", features = ["v4", "serde"] }
 base64 = "0.22.1"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_with = "3.14.1"
