chore: do major postgres upgrade
fix

--- a/helm/templates/database.yaml
+++ b/helm/templates/database.yaml
@@ -43,6 +43,7 @@ spec:
   primaryUpdateStrategy: unsupervised
   primaryUpdateMethod: switchover
   enableSuperuserAccess: false
+  imageName: ghcr.io/cloudnative-pg/postgresql:18.1
   storage:
     size: {{ default "5Gi" $.Values.clusterDB.storageSize }}
     {{ if $.Values.clusterDB.storageClass }}
