--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -23,6 +23,10 @@ pollStatus:
   schedule: 0 6-18 * * 1-5
   jobHistoryLimit: 3
 
+markStale:
+  schedule: 0 2 * * *
+  jobHistoryLimit: 3
+
 clusterDB:
   replicas: 3
   storageSize: 5Gi
