--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,7 @@ resolver = "3"
 
 [workspace.dependencies]
 clap = { version = "4.5.37", features = ["derive", "env"] }
+reqwest = { version = "0.12.23", default-features = false, features = [
+  "json",
+  "rustls-tls-webpki-roots"
+] }
