--- a/crates/adapter/Cargo.toml
+++ b/crates/adapter/Cargo.toml
@@ -35,7 +35,6 @@ once_cell = "1.21.3"
 
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "ansi"], default-features = false }
-tracing-setup = { git = "https://github.com/brainhivenl/tracing-setup.git" }
 
 chrono = { version = "0.4.41", features = ["serde"] }
 uuid = { version = "1.16.0", features = ["v4"] }
@@ -49,7 +48,8 @@ toml = "0.8.22"
 tokio = { version = "1.44.2", features = ["full"] }                                                                                   
 futures = "0.3.31"
 tower-http = { version = "0.6.6", features = ["trace", "cors"] }
-reqwest = { version = "0.12.23", features = ["json"] }
+reqwest = { workspace = true }
+
 axum = "0.8.3"                                                                                                                        
 axum-macros = "0.5.0"
 axum-prometheus = "0.9.0"
