--- a/crates/lightspeed/Cargo.toml
+++ b/crates/lightspeed/Cargo.toml
@@ -26,4 +26,4 @@ toml = "0.8.22"
 tokio = { version = "1.44.2", features = ["full"] }                                                                                   
 futures = "0.3.31"
 tower-http = { version = "0.6.6", features = ["trace"] }
-reqwest = { version = "0.12.23", features = ["json"] }
+reqwest = { workspace = true }
